syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message ClientMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message ServerMessage {
    int32 resultValue = 1;
}

service RemoteDBService {
    rpc generateValues(ClientMessage) returns (stream ServerMessage);
}
